Change log for duff
===================

Maintained since version 0.3.1.

2012-01-24  Camilla Berglund  <elmindreda@elmindreda.org>

 * duff.h duffdriver.c dufffile.c (file_list_*): Renamed from entry_list_*.
 * duff.h duffdriver.c dufffile.c (free_file): Renamed from free_entry.
 * duff.h duffdriver.c dufffile.c (init_file): Renamed from fill_entry.
 * duff.h duffdriver.c dufffile.c duffutil.c (FileList): Renamed from EntryList.
 * duff.h duffdriver.c dufffile.c duffutil.c (File): Renamed from Entry.
 * dufffile.c: Renamed from duffentry.c.
 * duffdriver.c (has_recorded_directory): Renamed from has_recursed_directory.
 * duffdriver.c (DirList): Added array of Dir structs.
 * duffdriver.c (Dir): Renamed from Directory and removed list link.
 * duff.h duffdriver.c: Moved Directory to duffdriver.
 * duffdriver.c (process_directory): Renamed from recurse_directory.
 * duff.h (EntryList): Renamed from List.
 * duffentry.c (get_entry_sample, get_entry_digest, compare_entry_contents):
 Improved error reporting.
 * duff.h duffentry.c: Added BUFFER_SIZE macro for size of read buffers.
 * duff.1: Improved grammar for -z flag.
 * duff.1: Clarified language for -e flag.
 * duff.1: Fixed statement claiming digests are calculated in thorough mode.

2012-01-23  Camilla Berglund  <elmindreda@elmindreda.org>

 * duffdriver.c (process_args, process_clusters): Moved freeing of entries to
 directly after each bucket has been processed.
 * duffdriver.c (process_clusters): Renamed from report_clusters.
 * duffdriver.c: Moved from single to BUCKET_COUNT entry lists, indexed by size.
 * duffdriver.c (process_args): Added function.
 * duffdriver.c (process_path, report_clusters): Made private to duffdriver.
 * duff.c duffdriver.c: Moved argument processing to duffdriver.
 * duffentry.c (fill_entry): Renamed function from make_entry.
 * duffdriver.c (free_entry_list): Removed function.
 * duffdriver.c: Replaced doubly linked lists with List.